page html structure added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,41 @@
             <h1>Meet Our Team</h1>
         </div>
     </header>
+
     <main class="content">
+
+        <section>
+            <div class="intro-text">
+
+            </div>
+        </section>
+
+        <section id="employees">
+            <div class="employee" id="marco">
+
+            </div>
+
+            <div class="employee" id="laura">
+
+            </div>
+
+            <div class="employee" id="giorgio">
+
+            </div>
+
+            <div class="employee" id="marta">
+
+            </div>
+
+            <div class="employee" id="roberto">
+
+            </div>
+
+            <div class="employee" id="daniela">
+
+            </div>
+
+        </section>
 
     </main>
 </body>
