fonts, images added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>html-css-float-cards</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
     <header class="header">
-        <div class="title">
-            <h1>Meet Our Team</h1>
+        <div class="logo">
+            <h1><a href="index.html">Meet Our Team</a></h1>
         </div>
     </header>
 
@@ -18,37 +20,43 @@
 
         <section>
             <div class="intro-text">
-
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque laudantium nostrum provident soluta. Aliquam eum magni sequi voluptate voluptatibus.</p>
             </div>
         </section>
 
-        <section id="employees">
+        <section class="section" id="employees">
             <div class="employee" id="marco">
-
+                <img src="assets/img/male1.png" alt="marco">
+                <div class="bio">
+                    <div class="name">Marco Bianchi</div>
+                    <div class="role">Designer</div>
+                    <div class="mail">marcobianchi@team.com</div>
+                </div>
             </div>
 
             <div class="employee" id="laura">
-
+                <img src="assets/img/female1.png" alt="marco">
             </div>
 
             <div class="employee" id="giorgio">
-
+                <img src="assets/img/male2.png" alt="marco">
             </div>
 
             <div class="employee" id="marta">
-
+                <img src="assets/img/female2.png" alt="marco">
             </div>
 
             <div class="employee" id="roberto">
-
+                <img src="assets/img/male3.png" alt="marco">
             </div>
 
             <div class="employee" id="daniela">
-
+                <img src="assets/img/female3.png" alt="marco">
             </div>
 
         </section>
 
     </main>
+
 </body>
 </html>
