added employees and page alignment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
         <section>
             <div class="intro-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque laudantium nostrum provident soluta. Aliquam eum magni sequi voluptate voluptatibus.</p>
+                <p id="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci magni maiores
+                    minus modi necessitatibus reprehenderit totam voluptatem. Autem commodi cumque deleniti deserunt
+                    doloremque doloribus eligendi et exercitationem facilis fugiat, harum id ipsa iste laborum
+                    laudantium magnam magni nihil possimus provident quae quas quia rem sed sequi soluta temporibus ut?
+                    Dolor.</p>
             </div>
         </section>
 
@@ -28,30 +32,55 @@
             <div class="employee" id="marco">
                 <img src="assets/img/male1.png" alt="marco">
                 <div class="bio">
-                    <div class="name">Marco Bianchi</div>
+                    <div class="name">MARCO BIANCHI</div>
                     <div class="role">Designer</div>
                     <div class="mail">marcobianchi@team.com</div>
                 </div>
             </div>
 
             <div class="employee" id="laura">
-                <img src="assets/img/female1.png" alt="marco">
+                <img src="assets/img/female1.png" alt="laura">
+                <div class="bio">
+                    <div class="name">LAURA ROSSI</div>
+                    <div class="role">Front-end Developer</div>
+                    <div class="mail">laurarossi@team.com</div>
+                </div>
             </div>
 
             <div class="employee" id="giorgio">
-                <img src="assets/img/male2.png" alt="marco">
+                <img src="assets/img/male2.png" alt="giorgio">
+                <div class="bio">
+                    <div class="name">GIORGIO VERDI</div>
+                    <div class="role">Designer</div>
+                    <div class="mail">marcobianchi@team.com</div>
+                </div>
             </div>
 
             <div class="employee" id="marta">
-                <img src="assets/img/female2.png" alt="marco">
+                <img src="assets/img/female2.png" alt="marta">
+                <div class="bio">
+                    <div class="name">MARTA IPSUM</div>
+                    <div class="role">SEO Specialist</div>
+                    <div class="mail">martaipsum@team.com</div>
+                </div>
             </div>
 
             <div class="employee" id="roberto">
-                <img src="assets/img/male3.png" alt="marco">
+                <img src="assets/img/male3.png" alt="roberto">
+                <div class="bio">
+                    <div class="name">ROBERTO LOREM</div>
+                    <div class="role">Project Manager</div>
+                    <div class="mail">robertolorem@team.com</div>
+                </div>
             </div>
 
             <div class="employee" id="daniela">
-                <img src="assets/img/female3.png" alt="marco">
+                <img src="assets/img/female3.png" alt="daniela">
+                <div class="bio">
+                    <div class="name">DANIELA AMET</div>
+                    <div class="role">Analyst</div>
+                    <div class="mail">danielaamet@team.com</div>
+                </div>
             </div>
 
         </section>
